# python-project-template

./: .gitignore  .mypy.ini  .travis.yml  LICENSE.txt  README.adoc  README.md  _config.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
