[metadata]
name = rchi_kivy_example
version = 0.0.1
license_files = LICENSE.txt  # This includes the license file(s) in the wheel.

[options]
install_requires = 
    kivy[full]

packages = find:

[options.packages.find]
include=pkg1, pkg2  # TODO: configure this
exclude=pkg3, pkg4  # TODO: configure this


[options.entry_points]
console_scripts =
    main = rchikivy:display_menu  # TODO: configure this

# USAGE #####################
# __init__.py                                                                              
# def hello_world():
#   print("Hello World")
#
# __main__.py
# from . import hello_world
#
# if __name__ == '__main__':
#   hello_world()
#############################



# NOTE: When this project is installed, a ``main`` script will be installed
# NOTE:     and will invoke the ``some_func`` in ``__init__.py`` file when
# NOTE:     called by the user.

